--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-17  Priit Laes  <amd@store20.com>
+
+	* et.po: Translation updated by Ivar Smolin.
+
 2006-03-17  Vladimer Sichinava  <alinux@siena.linux.it>
 
 	* ka.po: Updated Georgian translation.
