--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* th.po: Updated Thai translation.
+
 2006-03-17  Priit Laes  <amd@store20.com>
 
 	* et.po: Translation updated by Ivar Smolin.
