updated Brazilian Portuguese translation

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -5,14 +5,15 @@
 # Evandro Fernandes Giovanini <evandrofg@ig.com.br>, 2002-2003, 2006.
 # Gustavo Noronha Silva <kov@debian.org>, 2003.
 # Raphael Higino <raphaelh@uai.com.br>, 2004-2005.
+# Guilherme de S. Pastore <gpastore@gnome.org>, 2006.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-03-11 16:48-0300\n"
-"PO-Revision-Date: 2006-03-13 00:40-0300\n"
-"Last-Translator: Evandro Fernandes Giovanini <evandrofg@ig.com.br>\n"
+"POT-Creation-Date: 2006-03-18 11:46-0300\n"
+"PO-Revision-Date: 2006-03-18 11:47-0300\n"
+"Last-Translator: Guilherme de S. Pastore <gpastore@gnome.org>\n"
 "Language-Team: Brazilian Portuguese <gnome-l10n-br@listas.cipsga.org.br>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1822,6 +1823,7 @@ msgid "_Empty Trash"
 msgstr "_Esvaziar Lixeira"
 
 #: ../libnautilus-private/nautilus-file-utilities.c:75
+#: ../libnautilus-private/nautilus-query.c:135
 #: ../libnautilus-private/nautilus-search-directory-file.c:173
 #: ../libnautilus-private/nautilus-search-directory-file.c:188
 #: ../libnautilus-private/nautilus-search-directory-file.c:210
@@ -2471,6 +2473,11 @@ msgid ""
 msgstr ""
 "Para abrir arquivos externos copie-os para uma pasta local e arraste-os "
 "novamente. Os arquivos locais que você arrastou já foram abertos."
+
+#: ../libnautilus-private/nautilus-query.c:138
+#, c-format
+msgid "Search for \"%s\""
+msgstr "Procurar por \"%s\""
 
 #: ../libnautilus-private/nautilus-undo-signal-handlers.c:174
 #: ../src/nautilus-query-editor.c:984
@@ -5588,7 +5595,8 @@ msgstr ""
 "Gustavo Maciel Dias Vieira <gustavo@sagui.org>\n"
 "Evandro Fernandes Giovanini <evandrofg@ig.com.br>\n"
 "Gustavo Noronha Silva <kov@debian.org>\n"
-"Raphael Higino <raphaelh@uai.com.br>"
+"Raphael Higino <raphaelh@uai.com.br>\n"
+"Guilherme de S. Pastore <gpastore@gnome.org>"
 
 #: ../src/nautilus-window-menus.c:612
 msgid "_File"
