Updated Greek translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-19 Kostas Papadimas <pkst@gnome.org>
+
+	* el.po: Updated Greek Translation.
+
 2006-03-18  Ilkka Tuohela  <hile@iki.fi>
 
 	* fi.po: Updated Finnish translation.
