--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-19  Daniel Nylander <po@danielnylander.se>
+
+	* sv.po: Updated Swedish Translation.
+
 2006-03-19 Kostas Papadimas <pkst@gnome.org>
 
 	* el.po: Updated Greek Translation.
