Translation updated by Tino Meinen.
2006-03-19  Vincent van Adrighem  <adrighem@gnome.org>

	* nl.po: Translation updated by Tino Meinen.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-19  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Tino Meinen.
+
 2006-03-19  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish Translation.
