Add --no-desktop to the Exec command line options. (#326338)
2006-03-19  Martin Wehner  <martin.wehner@gmail.com>

	* nautilus-computer.desktop.in:
	* nautilus-folder-handler.desktop.in:
	* nautilus-home.desktop.in:
	* src/network-scheme.desktop.in:
	Add --no-desktop to the Exec command line options. (#326338)

	Patch from Saleem Abdulrasool

	* nautilus-computer.desktop.in:
	* nautilus-folder-handler.desktop.in:
	* nautilus-home.desktop.in:
	* nautilus.desktop.in:
	Remove obsolete X-Gnome-Bugzilla-OtherBinaries entry,
	none of the listed binaries does exist anymore.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+2006-03-19  Martin Wehner  <martin.wehner@gmail.com>
+
+	* nautilus-computer.desktop.in:
+	* nautilus-folder-handler.desktop.in:
+	* nautilus-home.desktop.in:
+	* src/network-scheme.desktop.in:
+	Add --no-desktop to the Exec command line options. (#326338)
+
+	Patch from Saleem Abdulrasool
+
+	* nautilus-computer.desktop.in:
+	* nautilus-folder-handler.desktop.in:
+	* nautilus-home.desktop.in:
+	* nautilus.desktop.in:
+	Remove obsolete X-Gnome-Bugzilla-OtherBinaries entry,
+	none of the listed binaries does exist anymore.
+
 2006-03-18  Martin Wehner  <martin.wehner@gmail.com>
 
 	* libnautilus-private/*.c:
