--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,25 @@
+2006-03-19  Christian Neumair  <chris@gnome-de.org>
+
+	* src/nautilus-main.c: (register_icons):
+	Speed up stock icon registration, as discussed on the mailing list:
+
+	http://mail.gnome.org/archives/nautilus-list/2006-March/msg00036.html
+
+	Also fixes #335158.
+
+	* src/nautilus-spatial-window.c: (action_add_bookmark_callback):
+	Don't add location bookmark for desktop windows. Fixes #334860.
+
+	* libnautilus-private/nautilus-file-operations.c:
+	(nautilus_file_operations_copy_move):
+	Check whether enclosing volume for any of the source files is
+	read-only, and set GNOME_VFS_XFER_TARGET_DEFAULT_PERMS in this case.
+	Fixes #167102.
+
+	* libnautilus-private/nautilus-file-utilities.c:
+	* libnautilus-private/nautilus-file-utilities.h:
+	Add nautilus_get_enclosing_volume.
+
 2006-03-19  Martin Wehner  <martin.wehner@gmail.com>
 
 	* nautilus-computer.desktop.in:
