Add help button to the Select Pattern dialog. (#331443)
2006-03-22  Martin Wehner  <martin.wehner@gmail.com>

	* src/file-manager/fm-directory-view.c:
	(pattern_select_response_cb), (select_pattern):
	Add help button to the Select Pattern dialog. (#331443)

	* src/nautilus-connect-server-dialog.c: (response_callback),
	(nautilus_connect_server_dialog_init):
	Add help button to the Connect to Server dialog. (#334330)

	* src/nautilus-location-dialog.c: (response_callback),
	(nautilus_location_dialog_init):
	Add help button to the Open Location dialog (#334293)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2006-03-22  Martin Wehner  <martin.wehner@gmail.com>
+
+	* src/file-manager/fm-directory-view.c:
+	(pattern_select_response_cb), (select_pattern):
+	Add help button to the Select Pattern dialog. (#331443)
+
+	* src/nautilus-connect-server-dialog.c: (response_callback),
+	(nautilus_connect_server_dialog_init):
+	Add help button to the Connect to Server dialog. (#334330)
+
+	* src/nautilus-location-dialog.c: (response_callback),
+	(nautilus_location_dialog_init):
+	Add help button to the Open Location dialog (#334293)
+
 2006-03-14  Federico Mena Quintero  <federico@novell.com>
 
 	* src/nautilus-window-menus.c: (nautilus_window_initialize_menus):
