--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-03-22  Daniel Drake  <dsd@gentoo.org>
+
+	* libnautilus-private/nautilus-icon-factory.c: Only consider
+	the filename suffix when deciding if a file is an SVG image.
+	Bug #330019.
+
 2006-03-22  Paolo Borelli  <pborelli@katamail.com>
 
 	* src/nautilus-application.c: use g_strv_length instead of a 
