--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-21 Kostas Papadimas <pkst@gnome.org>
+
+	* el.po: Updated Greek Translation.
+
 2006-03-21  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Hungarian translation updated by Mate ORY.
