--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-25 Nikos Charonitakis <nikosx@gmail.com>
+
+	* el.po: Updated Greek translation.
+
 2006-03-21 Kostas Papadimas <pkst@gnome.org>
 
 	* el.po: Updated Greek Translation.
