Fixed a few strings in Danish translation.
2006-03-28  Ole Laursen  <olau@hardworking.dk>

	* da.po: Fixed a few strings in Danish translation.

--- a/po/da.po
+++ b/po/da.po
@@ -35,7 +35,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-02-27 21:15+0100\n"
-"PO-Revision-Date: 2006-02-26 23:48+0100\n"
+"PO-Revision-Date: 2006-03-28 00:17+0200\n"
 "Last-Translator: Lasse Bang Mikkelsen <lbm@fatalerror.dk>\n"
 "Language-Team: Danish <dansk@dansk-gruppen.dk>\n"
 "MIME-Version: 1.0\n"
@@ -5569,7 +5569,7 @@ msgid ""
 "(at your option) any later version."
 msgstr ""
 "Nautilus er frit programmel. Du kan redistribuere og/eller ændre programmet\n"
-"under betingelsene givet i GNU General Public License som udgives af\n"
+"under betingelserne givet i GNU General Public License som udgives af\n"
 "Free Software Foundation; enten version 2 af licensen, eller (hvis du\n"
 "ønsker det) enhver senere version."
 
@@ -5592,7 +5592,7 @@ msgid ""
 "59 Temple Place, Suite 330, Boston, MA  02111-1307  USA"
 msgstr ""
 "Du burde have modtaget en kopi af GNU General Public License \n"
-"sammen med Nautilus. Hvis du ikke har det kan du skrive til Free \n"
+"sammen med Nautilus. Hvis du ikke har det, kan du skrive til Free \n"
 "Software Foundation, Inc. 59 Temple Place, Suite 330, Boston, MA\n"
 "02111-1307 USA"
 
