--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-28  Ole Laursen  <olau@hardworking.dk>
+
+	* da.po: Fixed a few strings in Danish translation.
+
 2006-03-25 Nikos Charonitakis <nikosx@gmail.com>
 
 	* el.po: Updated Greek translation.
