--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-28  Rhys Jones  <rhys@sucs.org>
+
+	* cy.po: Updated Welsh translation.
+
 2006-03-28  Ole Laursen  <olau@hardworking.dk>
 
 	* da.po: Fixed a few strings in Danish translation.
