Added Dzongkha translation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-31  Guntupalli Karunakar  <karunakar@indlinux.org>
+
+        * configure.in: Added "dz" (Dzongkha) to ALL_LINGUAS.
+
 2006-01-26  Martin Wehner  <martin.wehner@gmail.com>
 
 	* libnautilus-private/nautilus-file-operations.c:
