--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-31  Guntupalli Karunakar  <karunakar@indlinux.org>
+
+        * dz.po: Added Dzongkha translation.
+
 2006-01-18  Priit Laes  <plaes@cvs.gnome.org>
 
 	* et.po: Translation updated.
