--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-01  Yair Hershkovitz  <yaihr@gmail.com>
+
+	* he.po: Updated Hebrew translation.
+
 2006-03-30  Lukas Novotny  <lukasnov@cvs.gnome.org>
 
  	* cs.po: Updated Czech translation.
