Updated SPanish translation.
2006-04-02  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated SPanish translation.

--- a/po/es.po
+++ b/po/es.po
@@ -4,26 +4,26 @@
 # Nautilus's Spanish translation file.
 # Copyright © 2000-2003, 2006 Free Software Foundation, Inc.
 # This file is distributed under the same license as the nautilus package.
-#
 # Jorge Carrasquilla Soares <jorge@conectiva.com.br>, 2000.
 # Carlos Perelló Marín <carlos@gnome-db.org>, 2000,2002.
 # Ismael Olea <ismael@olea.org>, 2001.
 # Francisco Javier F. Serrador <serrador@cvs.gnome.org>, 2003, 2004, 2005, 2006.
 # Pablo Gonzalo del Campo <pablodc@bigfoot.com>, 2000, 2001, 2002, 2003, 2004.
 # Pablo G. del Campo <pablodc@bigfoot.com>, 2004.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-03-20 15:40+0100\n"
-"PO-Revision-Date: 2006-03-20 15:41+0100\n"
+"PO-Revision-Date: 2006-04-02 13:47+0200\n"
 "Last-Translator: Francisco Javier F. Serrador <serrador@cvs.gnome.org>\n"
 "Language-Team:  <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
-"X-Generator: KBabel 1.11.1\n"
+"X-Generator: KBabel 1.10.2\n"
 
 # components/help/hyperbola-filefmt.c:398
 # components/help/hyperbola-filefmt.c:671
@@ -1532,7 +1532,7 @@ msgstr "_Omitir"
 #: ../libnautilus-private/nautilus-file-operations.c:1138
 #, c-format
 msgid "Could not move \"%s\" to the new location."
-msgstr "No se pudo mover «%s» a lugar nuevo."
+msgstr "No se pudo mover «%s» al lugar nuevo."
 
 #: ../libnautilus-private/nautilus-file-operations.c:1141
 msgid ""
@@ -1974,16 +1974,15 @@ msgstr "Preparándose para vaciar la papelera…"
 # src/file-manager/fm-directory-view.c:1855
 #: ../libnautilus-private/nautilus-file-operations.c:2760
 msgid "Empty all of the items from the trash?"
-msgstr "¿Seguro que desea vaciar todos los elementos de la papelera?"
+msgstr "¿Desea vaciar todos los elementos de la papelera?"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2763
 msgid ""
 "If you choose to empty the trash, all items in it will be permanently lost. "
 "Please note that you can also delete them separately."
 msgstr ""
-"Si elige vaciar la papelera, todos los elementos que estén en ella se "
-"perderán permanentemente. Tenga en cuenta que también puede borrarlos cada "
-"uno por separado."
+"Si elige vaciar la papelera, todos los elementos dentro de ella se perderán "
+"permanentemente. Quizá quiera borrarlos cada uno por separado."
 
 # src/file-manager/fm-directory-view.c:2154
 #: ../libnautilus-private/nautilus-file-operations.c:2785
@@ -2242,7 +2241,7 @@ msgstr "tipo desconocido"
 # libnautilus-private/nautilus-file.c:2931
 #: ../libnautilus-private/nautilus-file.c:4665
 msgid "unknown MIME type"
-msgstr "Tipo MIME desconocido"
+msgstr "tipo MIME desconocido"
 
 # libnautilus-private/nautilus-file.c:2936
 #. Fallback, use for both unknown attributes and attributes
@@ -2545,8 +2544,8 @@ msgid ""
 "\"%s\" can't open \"%s\" because \"%s\" can't access files at \"%s\"."
 "locations."
 msgstr ""
-"«%s» no puede abrir «%s» porque «%s» no puede acceder a los archivos en las "
-"direcciones «%s»."
+"«%s» no puede abrir «%s» porque «%s» no puede acceder a los archivos en los "
+"lugares «%s»."
 
 #: ../libnautilus-private/nautilus-program-choosing.c:171
 msgid ""
