--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-02  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Updated Spanish translation.
+
 2006-04-01  Yair Hershkovitz  <yaihr@gmail.com>
 
 	* he.po: Updated Hebrew translation.
