--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-04-02  Pema Geyleg  <pema.geyleg@gmail.com>
+
+	* dz.po: Added Dzongkha translation by Pema Geyleg
+
+
 2006-03-31  Guntupalli Karunakar  <karunakar@indlinux.org>
 
         * dz.po: Added Dzongkha translation.
