Updated Spanish translation.
2006-04-03  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated Spanish translation.

--- a/po/es.po
+++ b/po/es.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-03-20 15:40+0100\n"
-"PO-Revision-Date: 2006-04-02 13:47+0200\n"
+"PO-Revision-Date: 2006-04-02 14:36+0200\n"
 "Last-Translator: Francisco Javier F. Serrador <serrador@cvs.gnome.org>\n"
 "Language-Team:  <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -1043,7 +1043,7 @@ msgstr "Pega el texto almacenado en el portapapeles"
 #: ../libnautilus-private/nautilus-clipboard.c:453
 #: ../src/file-manager/fm-directory-view.c:6667
 msgid "Select _All"
-msgstr "Seleccionar _todo"
+msgstr "Seleccionar t_odo"
 
 # libnautilus-private/nautilus-global-preferences.c:622
 #. label, accelerator
@@ -2965,8 +2965,8 @@ msgstr[1] "%d carpetas seleccionadas"
 #, c-format
 msgid " (containing %d item)"
 msgid_plural " (containing %d items)"
-msgstr[0] " (conteniendo %d elemento)"
-msgstr[1] " (conteniendo %d elementos)"
+msgstr[0] " (contiene %d elemento)"
+msgstr[1] " (contiene %d elementos)"
 
 # src/file-manager/fm-directory-view.c:1030
 #. translators: this is preceded with a string of form 'N folders' (N more than 1)
@@ -3367,7 +3367,7 @@ msgstr "Abre cada elemento seleccionado en una ventana de navegación"
 #: ../src/file-manager/fm-directory-view.c:6633
 #: ../src/file-manager/fm-directory-view.c:6637
 msgid "Open with Other _Application..."
-msgstr "Abrir con otra _aplicación…"
+msgstr "Abrir con _otra aplicación…"
 
 # libnautilus-private/nautilus-program-chooser.c:1248
 #. label, accelerator
@@ -3432,7 +3432,7 @@ msgstr "Selecciona todos los elementos que hay en esta ventana"
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6671
 msgid "Select _Pattern"
-msgstr "_Patrón de selección"
+msgstr "Patrón de _selección"
 
 # libnautilus-private/nautilus-global-preferences.c:622
 #. label, accelerator
@@ -3444,7 +3444,7 @@ msgstr "Selecciona los elementos en esta ventana que coincidan con un patrón da
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6675
 msgid "D_uplicate"
-msgstr "D_uplicar"
+msgstr "_Duplicar"
 
 # src/file-manager/fm-directory-view.c:2678
 #. label, accelerator
@@ -3485,7 +3485,7 @@ msgstr "Renombra el elemento seleccionado"
 #: ../src/file-manager/fm-directory-view.c:7391
 #: ../src/file-manager/fm-directory-view.c:7780
 msgid "Mo_ve to Trash"
-msgstr "Mo_ver a la papelera"
+msgstr "_Mover a la papelera"
 
 # src/file-manager/fm-directory-view.c:2669
 #. label, accelerator
@@ -3514,7 +3514,7 @@ msgstr "Borra cada elemento seleccionado, sin moverlo a la papelera"
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6699
 msgid "Reset View to _Defaults"
-msgstr "_Restablecer la vista"
+msgstr "Restaurar a vista _predeterminada"
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6700
@@ -3959,7 +3959,7 @@ msgstr "Mantiene los iconos ordenados por nombre en filas"
 # src/file-manager/fm-icon-view.c:116
 #: ../src/file-manager/fm-icon-view.c:142
 msgid "by _Size"
-msgstr "por t_amaño"
+msgstr "por _tamaño"
 
 # src/file-manager/fm-icon-view.c:117
 #: ../src/file-manager/fm-icon-view.c:143
@@ -3970,7 +3970,7 @@ msgstr "Mantiene los iconos ordenados por tamaño en filas"
 # src/file-manager/fm-icon-view.c:123
 #: ../src/file-manager/fm-icon-view.c:149
 msgid "by _Type"
-msgstr "por _tipo"
+msgstr "por ti_po"
 
 # src/file-manager/fm-icon-view.c:124
 #: ../src/file-manager/fm-icon-view.c:150
@@ -4032,7 +4032,7 @@ msgstr "Restaura cada icono seleccionado a su tamaño original"
 #. name, stock id
 #: ../src/file-manager/fm-icon-view.c:1423
 msgid "Clean _Up by Name"
-msgstr "Re_ordenar por nombre"
+msgstr "Ordenar por _nombre"
 
 #. label, accelerator
 #: ../src/file-manager/fm-icon-view.c:1424
@@ -4109,7 +4109,7 @@ msgstr "Por _emblemas"
 # src/file-manager/fm-icon-view.c:318
 #: ../src/file-manager/fm-icon-view.c:1572
 msgid "Restore Icon's Original Si_ze"
-msgstr "Restablecer el _tamaño original del icono"
+msgstr "_Restablecer el tamaño original del icono"
 
 # src/file-manager/fm-icon-view.c:1277
 #: ../src/file-manager/fm-icon-view.c:1987
@@ -6016,7 +6016,7 @@ msgstr "Abrir _lugar…"
 
 #: ../src/nautilus-spatial-window.c:840
 msgid "Close P_arent Folders"
-msgstr "Cerrar las carpetas _antecesoras"
+msgstr "Cerrar las carpetas a_ntecesoras"
 
 # libnautilus-private/nautilus-global-preferences.c:165
 #. name, stock id, label
@@ -6251,7 +6251,7 @@ msgstr "Deshacer el último cambio del texto"
 
 #: ../src/nautilus-window-menus.c:631
 msgid "Open _Parent"
-msgstr "Abrir _antecesor"
+msgstr "Abrir ant_ecesor"
 
 # libnautilus-private/nautilus-file.c:2586
 #. name, stock id, label
@@ -6291,7 +6291,7 @@ msgstr "Muestra la ayuda de Nautilus"
 #. name, stock id
 #: ../src/nautilus-window-menus.c:650
 msgid "_About"
-msgstr "A_cerca de"
+msgstr "Acerca _de"
 
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:651
@@ -6302,7 +6302,7 @@ msgstr "Muestra los créditos de los creadores de Nautilus"
 #. name, stock id
 #: ../src/nautilus-window-menus.c:654
 msgid "Zoom _In"
-msgstr "A_mpliar"
+msgstr "_Ampliar"
 
 # src/file-manager/fm-properties-window.c:864
 #. label, accelerator
@@ -6325,7 +6325,7 @@ msgstr "Muestra el contenido con menos detalle"
 #. name, stock id
 #: ../src/nautilus-window-menus.c:674
 msgid "Normal Si_ze"
-msgstr "Tamaño no_rmal"
+msgstr "Tamaño _normal"
 
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:675
